# Shop_API

./: .env  Dockerfile  Makefile  README.md  curls.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
callback/: api.py  serializers.py  tests.py
config/: settings.py  urls.py  wsgi.py
config/nginx/: nginx.conf
service/: db.py  tests.py
shop/: admin.py  models.py
shop/migrations/: 0001_initial.py
